--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -2113,30 +2113,26 @@ tspan, .vx-axis-label {
 
 /* Begin - Animate the loading */
 .load-wrapp {
-		align-content: center;
     width: 100px;
-    height: 100px;
-    margin: 0 10px 10px 0;
-    padding: 20px 20px 20px;
-    border-radius: 5px;
-    text-align: center;
+    height: 60px;
+    padding: 0 50px; margin: 0;
     background-color: transparent;
+    display: inline-block;
+    transform: rotate(180deg)
 }
-
-.load-wrapp p {padding: 0 0 20px;}
-.load-wrapp:last-child {margin-right: 0;}
 
 .line {
     display: inline-block;
-    width: 15px;
+    width: 13px;
     height: 15px;
-    border-radius: 15px;
     background-color: #e84a5f;
+    margin: 0 2px;
+    vertical-align: bottom;
 }
 
-.load-1 .line:nth-last-child(1) {animation: loadingA 1.5s 1s infinite;}
-.load-1 .line:nth-last-child(2) {animation: loadingA 1.5s .5s infinite;}
-.load-1 .line:nth-last-child(3) {animation: loadingA 1.5s 0s infinite;}
+.load-1 .line:nth-last-child(1) {animation: loadingA 1.5s 1s infinite; background-color: #d65e6e; vertical-align: top;}
+.load-1 .line:nth-last-child(2) {animation: loadingA 1.5s .5s infinite; vertical-align: top;}
+.load-1 .line:nth-last-child(3) {animation: loadingA 1.5s 0s infinite; background-color: #e34659; vertical-align: top;}
 
 @keyframes loadingA {
     0 {height: 15px;}
