--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1777,7 +1777,7 @@ tr.row2table:nth-child(odd){
   color: #2a363b;
   vertical-align: middle;
   text-align: left;
-  font-weight: 600;
+  font-weight: 600 !important;
   font-size: 13px !important;
   border: 1px solid #fff !important;
   border-radius: 3px;
@@ -1788,10 +1788,11 @@ tr.row2table:nth-child(odd){
 	text-transform: uppercase;
 	padding: 5px 8px !important;
 	min-height: 32px !important;
+	min-width: 164px !important;
 }
 
-.downgraph {
-	min-width: 156px !important;
+.saveStrategyButton {
+min-width: initial !important;
 }
 
 .downgraph svg, .backgraph svg, .iconsave svg, .saveStrategyButton svg {
