--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -56,7 +56,7 @@ a {
 }
 
 .wrapper {
-	min-height: calc(100vh - 160px);
+	min-height: calc(100vh - 264px);
 	width: 100%;
 	display: block;
 	background-image: -webkit-linear-gradient(bottom, #d5d4d0 0%, #d5d4d0 1%, #eeeeec 31%, #efeeec 75%, #e9e9e7 100%);
@@ -242,15 +242,10 @@ header h3 a {
 	font-weight: 600;
 	line-height: 0;
 	display: inline-block;
-	max-width: 120px;
 	height: 22px;
 	line-height: 22px;
 	padding: 15px 0 15px 15px;
 	color: #2a363b;
-/*	-ms-text-overflow: ellipsis;
-	text-overflow: ellipsis;
-	white-space: nowrap;
-	overflow: hidden;*/
 }
 
 .iconUserLogged {
@@ -1490,11 +1485,6 @@ p.legcomp {
 	margin-top: 5px;
 }
 
-.complist-longer{
-	margin-top: 5px;
-	padding-bottom: 150px;
-}
-
 .popbtns {
 	padding-bottom: 10px;
 	/* display: -webkit-flex;
@@ -1512,14 +1502,13 @@ p.legcomp {
   height: 25px;
 }
 
-.complist-longer svg {
-  color: #ea495f;
-  float: left;
-  width: 25px;
-  height: 25px;
+.Select-menu-outer {
+	top: auto;
+	bottom: 100%;
+	position: relative !important;
+	height: auto !important;
+	display: block !important;
 }
-
-.Select-menu-outer { top: auto; bottom: 100%; }
 
 .Select-option.is-focused  {
     background-color: rgba(252, 228, 232) !important;
@@ -1906,7 +1895,8 @@ tspan, .vx-axis-label {
 	right: 0;
 	border-radius: 5px 0 0 5px;
 	padding: 140px 20px 30px;
-	background-image: url(./img/bgmountain.png);
+	background-image: url(./img/login.png);/*
+	background-image: url(./img/bgmountain.png);*/
 	background-repeat: no-repeat;
 }
 
@@ -2277,9 +2267,13 @@ tspan, .vx-axis-label {
     }
 }
 
-@media screen and (max-width: 630px){
+@media screen and (max-width: 619px){
     menu, .content {
         display: none;
+    }
+
+    .userInfo h6 {
+    	display: none;
     }
 
 }
@@ -2289,4 +2283,14 @@ tspan, .vx-axis-label {
     .container {
         width: 90%;
     }
+}
+
+@media screen and (max-width: 450px){
+
+    .logoGEB {
+    	width: 65px;
+    	-webkit-background-size: contain;
+    	background-size: contain;
+    }
+
 }
