ajuste drop menu consultas

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1505,6 +1505,9 @@ p.legcomp {
 .Select-menu-outer {
 	top: auto;
 	bottom: 100%;
+}
+
+.complist-longer .Select-menu-outer {
 	position: relative !important;
 	height: auto !important;
 	display: block !important;
