--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1501,6 +1501,44 @@ p.legcomp {
   text-align: left;
 }
 
+.ecosystems {
+  padding: 10px 15px;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+  background-color: #345b6b;
+  border-radius: 5px;
+  margin-right: 5px;
+  min-width: 190px;
+  margin-top: 5px;
+	color: #fff;
+}
+
+.ecosystems h3 {
+  font-size: 18px;
+  color: #ffb5bd;
+  font-weight: 400;
+  padding-bottom: 5px;
+  text-align: left;
+}
+
+.ecosystems:hover {
+  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+}
+
+.ecosystems h4 {
+  font-size: 30px;
+  text-align: left;
+  margin-bottom: 15px;
+}
+
+.eco_title h3 {
+  font-size: 30px;
+	color: #e84a5f;
+}
+
+.eco_title h4 {
+	color: #ffedef;
+}
+
 .Biomatit {
   color: #424242;
   padding: 5px;
