--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -852,6 +852,11 @@ footer h4 {
 	justify-content: space-between;
 }
 
+.colaboradores a {
+	margin-left: 30px;
+	vertical-align: top;
+}
+
 .footersm {
 	display: -webkit-flex;
 	display: -moz-flex;
@@ -1485,6 +1490,7 @@ div[id*="panel"] button:hover {
 	margin: 0 !important;
 	line-height: 1em !important;
 }
+
 .graficaeco2 h3 {
 	margin-bottom: 0;
 	padding: 0;
