Title on the map is added

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1110,7 +1110,7 @@ a#reset-filters {
   height: calc(100vh - 141px);
 }
 
-.mapsmTitle {
+.mapsTitle {
 	position: absolute;
 	top:100px;
 	left:50px;
