--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -2422,7 +2422,7 @@ tspan, .vx-axis-label {
 .load-1 .line:nth-last-child(3) {animation: loadingA 1.5s 0s infinite; background-color: #e32759; vertical-align: top;}
 
 @keyframes loadingA {
-    0 {height: 15px;}
+    0% {height: 15px;}
     50% {height: 35px;}
     100% {height: 15px;}
 }
