--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1427,6 +1427,11 @@ div[id*="panel"] button:hover {
 	padding-top: 0 !important;
 }
 
+.pt6 {
+	width: 100%;
+	padding: 15px 0 !important;
+}
+
 .graphcontainer h4 {
 	display: table;
 	text-transform: uppercase;
@@ -1613,6 +1618,17 @@ div[id*="panel"] button:hover {
 	margin-bottom: 10px;
 }
 
+.pt6 .graphinfo {
+	display: block;
+	text-align: left;
+	padding-left: 22px;
+	margin-bottom: 10px;
+}
+
+.pt6 p {
+	margin: 5px 0 0 15px;
+}
+
 .graphcardAcc {
 	box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.2), 0px 1px 1px 0px rgba(0,0,0,0.14), 0px 2px 1px -1px rgba(0,0,0,0.12);
 	border-bottom-right-radius: 4px;
@@ -1640,7 +1656,7 @@ div[id*="panel"] button:hover {
   float: right;
 }
 
-.graphcardAcc h3 {
+.graphcardAcc h3, .pt6 h6 {
 	display: inline-block;
 	padding: 5px 12px;
 	text-align: left;
