--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -65,13 +65,19 @@ a {
 }
 
 header.cabezote {
-	height: 60px;
 	width: 100%;
 	border-bottom: 1px solid #c3c3c3;
-	padding: 15px 0;
 	display: flex;
 	justify-content: space-between;
 	background-color: #efeeec;
+}
+
+.cabezoteLeft {
+	padding: 15px 0;
+}
+
+.cabezoteRight {
+	display: inline-block;
 }
 
 nav {
@@ -225,7 +231,7 @@ header h3 a {
 }
 
 .userBox:hover {
-	color: #e84a5f;
+	color: #2a363b;
 }
 
 .userInfo {
@@ -1165,27 +1171,35 @@ overflow: auto;
 
 .header_info {
 	background-color: #e84a5f;
-	display: flex;
-	align-items: center;
+	padding: 15px;
+	text-align: right;
+	vertical-align: middle;
+	margin-right: 25px;
 }
 
 .header_info h1 {
-  font-size: 1.3em;
+  font-size: 1.2em;
 	font-weight: 400;
 	color: #fff;
-  text-transform: uppercase;
-  text-align: left;
+  text-align: right;
 	margin: 0;
-	padding: 20px;
+	padding: 18px;
+	display: inline-block;
+	vertical-align: middle;
+}
+
+.header_info h1 b {
+	font-size: 1.3em;
 }
 
 .iconsection {
   background-image: url(../assets/img/geografico.png);
   -webkit-background-size: contain;
   background-size: contain;
-  float: right;
+  display: inline-block;
   width: 65px;
   height: 65px;
+  vertical-align: middle;
 }
 
 .iconsec2 {
@@ -1416,6 +1430,22 @@ div[id*="panel"] button:hover {
   box-shadow: none !important;
   height: auto;
   padding: 0;
+}
+
+.HAgen h4 {
+	padding: 8px 12px;
+	text-transform: uppercase;
+	font-size: 14px;
+	background-color: #2a363b;
+	font-weight: 400;
+	color: #e84a5f;
+}
+
+.HAgen h4 b {
+	text-transform: none;
+	margin-left: 10px;
+	font-weight: 700;
+	color: #fff;
 }
 
 .graphcontainer {
@@ -1666,6 +1696,16 @@ div[id*="panel"] button:hover {
 	text-transform: uppercase;
 	border: 1px solid #4a585f;
 	color: #4a585f;
+}
+
+.pt6 h6 {
+	margin-right: 0;
+}
+
+.pt6 h5 {
+	display: inline-block;
+	margin-left: 0;
+	padding: 5px 12px 7px;
 }
 
 p.legcomp {
@@ -2115,6 +2155,11 @@ tspan, .vx-axis-label {
   -moz-osx-font-smoothing: grayscale !important;
 }
 
+.loginBtnCont {
+	display: inline-block;
+	vertical-align: middle;
+}
+
 .loginBtn {
 	border: none;
 	background-color: transparent;
@@ -2182,8 +2227,8 @@ tspan, .vx-axis-label {
 	width: 300px;
 	background-color: #ffffff;
 	box-shadow: 0 3px 3px rgba(0,0,0,0.12), 0 3px 3px rgba(0,0,0,0.14);
-	top: 65px;
-	right: 0;
+	top: 85px;
+	right: 25px;
 	border-radius: 5px 0 0 5px;
 	padding: 140px 20px 30px;
 }
