--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1756,6 +1756,16 @@ p.legcomp {
   font-weight: 500;
   font-size: 14px;
 }
+.leaflet-tooltip {
+  background-color: rgba(0,0,0,0.9) !important;
+  color: #fff !important;
+  padding: 12;
+  line-height: 1.5;
+  border-radius: 4px;
+  font-weight: 500;
+  font-size: 14px;
+  border: 0; 
+}
 
 .nocolor {
   color: transparent;
