--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -82,8 +82,7 @@ header.cabezote {
 
 .cabezoteRight h2 {
 	display: inline-block;
-	text-transform: uppercase;
-	font-size: 2.2em;
+	font-size: 2em;
 	font-family: 'Lato', sans-serif;
 	color: #fff;
 	transform: translateY(50%);
@@ -198,7 +197,7 @@ nav a:hover {
 
 header h3 {
 	font-weight: 400;
-	height: 60px;
+	height: 55px;
 	padding: 10px 10px 0;
 	margin-left: 5px;
 	font-size: 36px;
@@ -1184,8 +1183,10 @@ overflow: auto;
 	background-color: #e84a5f;
 	padding: 15px;
 	text-align: right;
-	vertical-align: middle;
 	margin-right: 25px;
+	display: grid;
+    grid-auto-flow: column;
+    align-self: center;
 }
 
 .header_info h1 {
@@ -1443,7 +1444,7 @@ div[id*="panel"] button:hover {
 }
 
 .HAgen h4 {
-	padding: 8px 12px;
+	padding: 8px 25px;
 	text-transform: uppercase;
 	font-size: 14px;
 	background-color: #2a363b;
@@ -1626,9 +1627,14 @@ div[id*="panel"] button:hover {
 }
 
 .graphcardAcc .graphinfo {
-	padding-left: 3px;
+	padding-left: 0px;
 	padding-right: 0;
 	color: #cccccc;
+}
+
+.graphinfobox {
+	padding-left: 27px;
+	margin-bottom: 20px;
 }
 
 .MuiSvgIcon-root-1.graphinfo {
@@ -1642,7 +1648,7 @@ div[id*="panel"] button:hover {
 .graphinfo2-true p {
 	font-family: 'Lato', sans-serif;
 	color: #424242;
-	padding: 3px 15px 10px;
+	padding: 3px 8px 10px;
 
 }
 
@@ -1654,7 +1660,7 @@ div[id*="panel"] button:hover {
 	transition: all 1s;
 	border-bottom: 1px solid #dddddd;
 	width: 94%;
-	margin: 0 3%;
+	margin: 0;
 	margin-bottom: 10px;
 }
 
@@ -1715,7 +1721,8 @@ div[id*="panel"] button:hover {
 .pt6 h5 {
 	display: inline-block;
 	margin-left: 0;
-	padding: 5px 12px 7px;
+	padding: 5px 12px;
+	border: 1px solid;
 }
 
 p.legcomp {
@@ -2176,8 +2183,9 @@ tspan, .vx-axis-label {
 }
 
 .loginBtnCont {
-	display: inline-block;
-	vertical-align: middle;
+	display: grid;
+	min-height: 70px;
+	margin-top: -6px;
 }
 
 .loginBtn {
