--- a/src/main.css
+++ b/src/main.css
@@ -1726,6 +1726,10 @@ div[class*="eaRHYv"] {
 	margin: 5px 0 0 15px;
 }
 
+.svgPointer {
+	cursor: pointer;
+}
+
 .graphcardAcc {
 	box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.2), 0px 1px 1px 0px rgba(0,0,0,0.14), 0px 2px 1px -1px rgba(0,0,0,0.12);
 	border-bottom-right-radius: 4px;
@@ -1767,6 +1771,12 @@ div[class*="eaRHYv"] {
 
 .pt6 h6 {
 	margin-right: 0;
+}
+
+.pt6 h6.h6Selected {
+	color: #ffffff;
+	background-color: #120000;
+	font-weight: 600;
 }
 
 .pt6 h5 {
