--- a/packages/cbm-dashboard/src/main.css
+++ b/packages/cbm-dashboard/src/main.css
@@ -12,6 +12,9 @@
 	    "leftcol Montabs1 Montabs2 Montabs3 Montabs4"
 	    "leftcol Graph Graph Graph graphInfo"
 	    "leftcol Graph Graph Graph graphInfo";
+	background-image: -webkit-linear-gradient(bottom, #d5d4d0 0%, #d5d4d0 1%, #eeeeec 31%, #efeeec 75%, #e9e9e7 100%);
+	background-image: -o-linear-gradient(bottom, #d5d4d0 0%, #d5d4d0 1%, #eeeeec 31%, #efeeec 75%, #e9e9e7 100%);
+	background-image: linear-gradient(to top, #d5d4d0 0%, #d5d4d0 1%, #eeeeec 31%, #efeeec 75%, #e9e9e7 100%);
 }
 
 .leftcol { grid-area: leftcol; }
