--- a/src/main.css
+++ b/src/main.css
@@ -1810,6 +1810,20 @@ div[class*="eaRHYv"] {
 	margin-right: 10px;
 }
 
+.innerInfo {
+	text-transform: none !important;
+	border: none !important;
+	font-weight: 700 !important;
+}
+
+.innerInfoH5 {
+	padding: 3px 4px 0 !important;
+}
+
+.innerInfoH3 {
+	margin: 2px 0 0 35px !important;
+}
+
 .fiLegend {
 	margin-bottom: 10px;
 }
