Add legends to number of speceis

--- a/src/main.css
+++ b/src/main.css
@@ -1802,6 +1802,14 @@ div[class*="eaRHYv"] {
 	border: 1px solid;
 }
 
+.richnessLegend {
+	margin: 10px 0 8px 25px;
+}
+
+.richnessLegend p {
+	margin-right: 10px;
+}
+
 .dpcLegend{
 	margin-left: 25px;
 }
