--- a/src/main.css
+++ b/src/main.css
@@ -82,6 +82,7 @@ a, .linkText {
 
 .wrapper {
 	width: 100%;
+	min-height: calc(100vh - 269px);
 	display: block;
 	background-image: -webkit-linear-gradient(bottom, #d5d4d0 0%, #d5d4d0 1%, #eeeeec 31%, #efeeec 75%, #e9e9e7 100%);
 	background-image: -o-linear-gradient(bottom, #d5d4d0 0%, #d5d4d0 1%, #eeeeec 31%, #efeeec 75%, #e9e9e7 100%);
