--- a/src/main.css
+++ b/src/main.css
@@ -1182,6 +1182,10 @@ overflow: auto;
 	z-index:2;
 }
 
+.contentView * {
+	transition: all 1s ease;
+}
+
 .selector {
 	font-family: 'Roboto', sans-serif;
 	font-size: 12px;
@@ -1324,7 +1328,8 @@ overflow: auto;
 .m0, .m0b {
     margin: 0 !important;
     color: #2a363b !important;
-    font-size: 14px;
+    font-size: 12px;
+    line-height: 1.3;
 }
 
 .m0b > div:nth-child(1) {
@@ -1431,8 +1436,6 @@ div[class*="eaRHYv"] {
   display: inline-block !important;
 	margin: 10px 20px;
 }
-
-
 
 #region .inlineb button {
   background-color: transparent;
@@ -1732,10 +1735,14 @@ div[class*="eaRHYv"] {
 	margin-bottom: 10px;
 }
 
+.pt6 h2 svg {
+	color: #cccccc;
+}
+
 .pt6 .graphinfo {
 	display: block;
 	text-align: left;
-	padding-left: 22px;
+	padding-left: 10px;
 	margin-bottom: 10px;
 }
 
@@ -1772,7 +1779,7 @@ div[class*="eaRHYv"] {
 	padding: 5px 12px;
 	text-align: left;
 	font-size: 14px;
-	margin: 12px 15px 8px;
+	margin: 12px 3px 8px 15px;
 	letter-spacing: 1;
 	text-transform: uppercase;
 	border: 1px solid #4a585f;
@@ -1942,7 +1949,15 @@ p.legcomp {
 
 .icondown-container {
 	display: inline-block;
-	vertical-align: bottom;
+	vertical-align: middle;
+}
+
+.icondown-container svg {
+	color: #cccccc;
+}
+
+.icondown-container svg:hover {
+	color: #2a363b;
 }
 
 .icongraph, .icondelete {
@@ -2563,11 +2578,14 @@ tspan, .vx-axis-label {
 }
 
 .ul-padding-info-text {
-	padding-left: 70px;
+	padding-left: 60px;
+	color: #424242;
+	font-size: 11px;
+	list-style: disc;
 }
 
 .ul-padding-info-text li{
-	padding-top: 5px;
+	padding-top: 3px;
 }
 
 /* Begin - Animate the loading */
