--- a/src/main.css
+++ b/src/main.css
@@ -1149,17 +1149,35 @@ a#reset-filters {
 }
 
 .mapsTitle {
-	position: absolute;
-	top:100px;
-	left:50px;
-	background-color: #fff;
-	color: #e84a5f;
-	border-bottom: 1px solid #e84a5f;
+	position: relative;
+	left: 45px;
 	font-size: 15px;
-	z-index:1;
+	z-index: 401;
 	display: inline-block;
-	padding: 5px 12px;
 }
+
+.mapsTitle > .title {
+  background-color: #fff;
+  color: #e84a5f;
+	border-bottom: 1px solid #e84a5f;
+  padding: 5px 12px;
+}
+
+.gradientLegend {
+  background-color: #fff;
+  font-size: 9px;
+  font-weight: 600;
+  color: #2a363b;
+  margin-top: 1px;
+  padding: 5px 8px 3px;
+}
+
+.gradientLegend > .text {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 0 auto;
+}
+
 /*Map container*/
 .viewfinder {
   margin: 2px;
