--- a/src/main.css
+++ b/src/main.css
@@ -19,6 +19,10 @@ body {
 	height: 100%;
 }
 
+.sr-only {
+    display: none;
+}
+
 .fullgrid {
 	display: grid;
 	grid-template-rows: auto 1fr auto;
