--- a/src/main.css
+++ b/src/main.css
@@ -1328,6 +1328,10 @@ overflow: auto;
     padding-top: 0;
 }
 
+#panel2 {
+    display: block !important;
+}
+
 
 .m0, .m0b {
     margin: 0 !important;
