--- a/src/main.css
+++ b/src/main.css
@@ -1164,6 +1164,26 @@ a#reset-filters {
 	display: inline-block;
 	padding: 5px 12px;
 }
+
+.confirmButton {
+	position: absolute;
+	top:239px;
+	left:10px;
+	background-color: #e84a5f;
+	color: #501e23;
+	z-index:1;
+	display: block;
+	width: 30px;
+	height: 30px;
+	box-sizing: border-box;
+	padding: 4px;
+}
+
+.confirmButton svg {
+	width: 22px;
+	height: 22px;
+}
+
 /*Map container*/
 .viewfinder {
   margin: 2px;
